basic traversal works

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,18 +12,20 @@
     
 
 <div id="flex-container">
-<div id="bg-container" style="background-image: url(./assets/images/treepicEdit.png);"></div>
+<div id="bg-container" style="background-image: url(./assets/images/treepicEdit.png);">
+<!-- stuff goes here -->
+
+
+</div>
 
 <!-- seo -->
-<p>Explore the zombie sorcerer website on zombiesorcerer.com. Discover the zombie sorcerers by Matt and Connor and its unique features.</p>
-
-<div class="hoverUp clickable"></div>
-<div class="hoverRight clickable"></div>
-<div class="hoverLeft clickable"></div>
+<!-- <p>Explore the zombie sorcerer website on zombiesorcerer.com. Discover the zombie sorcerers by Matt and Connor and its unique features.</p> -->
 
 
 
 
 </div>
 </body>
-<!--  -->
+<script src="scripts/navigation.js"></script>
+
+</html>
