back button works on a basic level

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <div id="bg-container" style="background-image: url(./assets/images/treepicEdit.png);">
 <!-- stuff goes here -->
 
-
-</div>
-
 <!-- seo -->
 <!-- <p>Explore the zombie sorcerer website on zombiesorcerer.com. Discover the zombie sorcerers by Matt and Connor and its unique features.</p> -->
+</div>
+
+<button onclick="moveLocationWithBack(locations[currentLocation].previous)"> back btn test</button>
 
 
 
