--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 <!-- seo -->
 <!-- <p>Explore the zombie sorcerer website on zombiesorcerer.com. Discover the zombie sorcerers by Matt and Connor and its unique features.</p> -->
 </div>
-
+<button id="toggleMap" class="clickable">open map</button>
 <button onclick="moveLocationWithBack(locations[currentLocation].previous)"> back btn test</button>
 
 
 
 
 </div>
+
 </body>
 <script src="scripts/navigation.js"></script>
 
