fully working map #WeGetLit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- seo -->
 <!-- <p>Explore the zombie sorcerer website on zombiesorcerer.com. Discover the zombie sorcerers by Matt and Connor and its unique features.</p> -->
 </div>
-<button id="toggleMap" class="clickable">open map</button>
+<button id="toggleMap" class="clickable" onclick="toggleMap(locations[currentLocation].mapVer)">toggle map</button>
 <button onclick="moveLocationWithBack(locations[currentLocation].previous)"> back btn test</button>
 
 
